--- a/sass/utilities/_reset.scss
+++ b/sass/utilities/_reset.scss
@@ -1,25 +1,25 @@
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
- 
+
 html,
 body {
-    min-height: 100%;
+	min-height: 100%;
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
- 
+
 img {
-    height: auto;
+	max-height: 100%;
 }
 
 button {
-    border: none;
-    cursor: pointer;
+	border: none;
+	cursor: pointer;
 }
